# scp-dbus-service

./: .gitignore  ConfigPrinting.c  ConfigPrintingNewPrinterDialog.c  ConfigPrintingNewPrinterDialog.h  ConfigPrintingNewPrinterDialog.py  GetBestDriversRequest.c  GetBestDriversRequest.h  GroupPhysicalDevicesRequest.c  GroupPhysicalDevicesRequest.h  LICENSE  Makefile  Makefile.am  MissingExecutables.c  MissingExecutables.h  README.md  SCPService.pc.in  asyncconn.c  asyncconn.h  asyncipp.c  asyncipp.h  asyncpk1.c  asyncpk1.h  authinfocache.c  authinfocache.h  call_from_C.c  com.test.xml  configure.ac  dbus-send.txt  http_connection.c  killtimer.c  killtimer.h  main  main.c  newprinter.c  newprinter.h  newprinterdialog_dbus.c  newprinterdialog_dbus.h  nstring.c  nstring.h  org.fedoraproject.Config.Printing.xml  (+8 more)
dbus/: ConfigPrinting.c  ConfigPrintingNewPrinterDialog.c  ConfigPrintingNewPrinterDialog.h  GetBestDriversRequest.c  GetBestDriversRequest.h  GroupPhysicalDevicesRequest.c  GroupPhysicalDevicesRequest.h  JobApplet.c  JobApplet.h  Makefile.am  MissingExecutables.c  MissingExecutables.h  PPDialog.c  PPDialog.h  PhysicalDevice.c  PhysicalDevice.h  SCPService.h  asyncconn.c  asyncconn.h  asyncipp.c  asyncipp.h  authinfocache.c  authinfocache.h  killtimer.h  newprinter.c  newprinter.h  nstring.c  nstring.h  ppdcache.h  ppds.c  ppds.h  scp_interface.c  scp_interface.h  xml.c  xml.h
dbus/interface/: org.fedoraproject.Config.Printing.xml
demo/: Generic-PDF_Printer-PDF.ppd  Makefile  test.c
test/GDBus/: Makefile  README.md  client.c  com.test.xml  example.c  example.h  recve.c  server.c
test/dbus-python/: asyn_client.py  client.py  emitter.py  recipient.py  server.py
